--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/jest": "^29.5.12",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "20.11.19",
-    "aws-cdk": "2.170.0",
+    "aws-cdk": "^2.1104.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
