--- a/package.json
+++ b/package.json
@@ -1,33 +1,30 @@
 {
   "name": "eks-cdk-argocd-showcase",
-  "version": "0.1.0",
-  "bin": {
-    "eks-cdk-argocd-showcase": "bin/app.js"
-  },
+  "version": "1.0.0",
+  "description": "Production-ready EKS platform with CDK and GitOps",
+  "private": true,
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "test": "jest",
-    "cdk": "cdk",
-    "lint": "eslint",
-    "synth": "cdk synth",
-    "deploy": "cdk deploy",
-    "diff": "cdk diff",
-    "destroy": "cdk destroy"
+    "build": "cd iac && npm run build",
+    "build:watch": "cd iac && npm run build:watch",
+    "test": "cd iac && npm run test",
+    "cdk": "cd iac && npm run cdk",
+    "synth": "cd iac && npm run synth",
+    "synth:staging": "cd iac && cdk synth -c environment=staging",
+    "synth:prod": "cd iac && npm run synth:prod",
+    "deploy": "cd iac && npm run cdk deploy",
+    "deploy:prod": "cd iac && cdk deploy -c environment=prod --require-approval never",
+    "destroy": "cd iac && npm run cdk destroy",
+    "destroy:prod": "cd iac && cdk destroy -c environment=prod"
   },
-  "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@types/js-yaml": "^4.0.9",
-    "@types/node": "20.11.19",
-    "aws-cdk": "^2.1104.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.3.3"
-  },
-  "dependencies": {
-    "aws-cdk-lib": "^2.237.0",
-    "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
-  }
+  "keywords": [
+    "aws",
+    "cdk",
+    "eks",
+    "kubernetes",
+    "argocd",
+    "gitops"
+  ],
+  "author": "Victor Becerra",
+  "license": "MIT",
+  "devDependencies": {}
 }
